Update to junit5